--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,6 @@
     "angular-animate": "~1.3.14",
     "angular-sanitize": "~1.3.14"
   },
-  "name": "Pasquill",
+  "name": "Color See",
   "private": true
 }
